# linear_regression

./: LICENSE.txt  README.md  pyproject.toml
linreg/: __init__.py  gradient_decent.py  linreg.py  linreg_grad.py  linreg_num.py  utils.py
test/: test_grad_decent.py  test_linreg.py
